Fix audio player overflow & button color (#1586)

--- a/themes/finna2/less/finna/audio-player.less
+++ b/themes/finna2/less/finna/audio-player.less
@@ -51,6 +51,7 @@
   text-align: center;
   .play {
     font-size: 35px;
+    color: @action-link-color;
   }
 }
 
@@ -83,6 +84,7 @@
   color: @brand-primary;
   height: 60px !important;
   padding: 0;
+  width: 100%;
 
   .vjs-big-play-button,
   .vjs-poster,
